--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,5 @@ python-dotenv==1.2.1
 httpx==0.28.1
 
 # Authentication & Security
-python-jose[cryptography]==3.5.0
-passlib[bcrypt]==1.7.4
+PyJWT[crypto]==2.10.1
 python-multipart==0.0.20
