--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,20 @@ fastapi==0.121.1
 uvicorn[standard]==0.38.0
 pydantic==2.12.4
 pydantic-settings==2.11.0
-pydantic[email]==2.3.0
+pydantic[email]
+
 
 # LLM Agent Framework
-langchain==1.0.5
-langgraph==1.0.2
-langsmith==0.4.42
+# langsmith==0.4.42
+langchain-core>=0.3.0
+langchain-community>=0.2.0
+langchain-upstage>=0.1.0
+langchain-huggingface>=0.0.2
+sentence-transformers>=2.2.2
+upstage==0.1
+openai>=1.48.0
+
+
 
 # OpenAI
 openai==2.7.1
