누락된 환경변수 및 패키지 명시 & 컨벤션 제약 및 CI 설정 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+# AWS
+boto3==1.40.74
+
 # Web Framework
 fastapi==0.121.1
 uvicorn[standard]==0.38.0
 pydantic==2.12.4
 pydantic-settings==2.11.0
+
+# Web Search
+beautifulsoup4==4.14.2
+
 # pydantic[email]==2.3.0
 pydantic[email]==2.12.4 # pydantic-settings와 버전 충돌로 변경
 
