--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # OpenAI
 OPENAI_API_KEY=openai_api_key
 
+# Upstage Configuration
+UPSTAGE_API_KEY=upstage_api_key
+
+# Huggingface Configuration
+HF_API_KEY=huggingface_api_key
+
 # LangChain
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_API_KEY=langsmith_api_key
@@ -36,3 +42,7 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/auth/callback
 JWT_SECRET_KEY=secret_jwt_key
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
+
+# AWS Configuration
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
