--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,10 +8,9 @@ pytest-cov==7.0.0
 httpx==0.28.1
 
 # Code Quality
-black==25.11.0
-flake8==7.3.0
-isort==7.0.0
+ruff==0.14.5
 mypy==1.18.2
+pre-commit==4.4.0
 
 # Development
 ipython==9.7.0
