--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,34 @@
 # AWS
-boto3==1.40.74
+boto3==1.41.2
 
 # Web Framework
-fastapi==0.121.1
+fastapi==0.121.3
 uvicorn[standard]==0.38.0
 pydantic==2.12.4
-pydantic-settings==2.11.0
+pydantic[email]==2.12.4
+pydantic-settings==2.12.0
 
 # Web Search
 beautifulsoup4==4.14.2
 
-# pydantic[email]==2.3.0
-pydantic[email]==2.12.4 # pydantic-settings와 버전 충돌로 변경
-
-# LLM Agent Framework
-# langsmith==0.4.42 
-langchain-core>=0.3.0
-langchain-community>=0.2.0
-langchain-upstage>=0.1.0
-langchain-huggingface>=0.0.2
-sentence-transformers>=2.2.2
+# LLM Agent Framework - LangChain 1.0 Ecosystem
+langchain==1.0.8
+langchain-core==1.1.0
+langchain-community==0.4.1
+langchain-openai==1.0.3
+langchain-upstage==0.7.5
+langchain-huggingface==1.0.1
+langgraph-checkpoint-postgres==3.0.1
+sentence-transformers==5.1.2
 upstage==0.1
-openai>=1.48.0
-
-
+tiktoken==0.12.0
 
 # OpenAI
-openai==2.7.1
-tiktoken==0.12.0
+openai==2.8.1
 
 # Database
 psycopg2-binary==2.9.11
+psycopg[binary]==3.2.13
 pgvector==0.4.1
 sqlalchemy==2.0.44
 
