배포시 사용안하는 이미지 제거로 용량 관리

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,6 +42,10 @@ jobs:
             echo "Stopping old containers..."
             docker compose down
 
+            echo "Cleaning up Docker resources..."
+            docker system prune -af --volumes
+            docker builder prune -af
+
             echo "Building Docker images..."
             docker compose build --no-cache
 
